--- a/index.html
+++ b/index.html
@@ -5,16 +5,11 @@
 <title> STAR WARS - TOP FIVE RATED SHIPS TO TRAVEL WITH</title>
 </head>
 <body style="background-color:black; color:white;">
-
 <body>
-  
-  <header>
-  <img src="starwarsheader.png" alt="Header Image" style="width:100%; height:130px; object-fit:cover;">
- </header>
 
 
 <h1> STAR WARS - TOP FIVE RATED SHIPS TO TRAVEL WITH </h1>
-<P> Alright, listen up. If you’re gonna travel this <a href="page1.html" title="Whats a Galaxy">galaxy</a> , you don’t wanna be stuck crawling along in some slow freighter that can barely get out of its own way. No—you want something fast. Real fast. The kind of ship that makes the stars blur the second you hit the throttle.
+<P> Alright, listen up. If you’re gonna travel this <a href="page1.html" title="Whats a Galaxy?">galaxy</a> , you don’t wanna be stuck crawling along in some slow freighter that can barely get out of its own way. No—you want something fast. Real fast. The kind of ship that makes the stars blur the second you hit the throttle.
  We’re talking about ships that can outrun trouble, slip past a blockade, and still get you where you’re going before anyone even knew you left. These aren’t just rides—they’re your ticket to freedom, adventure, and maybe a little trouble along the way.
 So sit back while we run through the fastest ships you can hitch a ride on for your next journey. Who knows—one of ‘em might just make you believe in legends.</p>
 
