--- a/page1.html
+++ b/page1.html
@@ -8,8 +8,16 @@
 
 <h1> What's is a Galaxy?</h1>
 <P> A galaxy… well, it’s more than just stars and planets scattered in the night sky. 
-It’s an enormous family of suns, worlds, gas, and dust, all bound together by a mysterious force we call gravity. 
+It’s an enormous family:
+<ul>
+    <li>Suns</li>
+    <li>Worlds</li>
+    <li>Gas</li>
+    <li>Dust</li>
+</ul> 
+These are all bound together by a mysterious force we call gravity. 
 Our own home, the Milky Way, is just one of countless galaxies out there. When I was a farm boy staring up at the twin suns on Tatooine, I never imagined that our little system was just a tiny piece of something so much greater—millions of stars stretching farther than I could ever see.
 But galaxies aren’t all the same. Some spin like giant spirals, their arms reaching out like starships caught in a dance, while others are more like glowing clouds with no clear shape.
- Together they form clusters and superclusters, whole communities of worlds and civilizations. That’s the stage where stories like mine play out—where Empires rise, Rebels fight, and hope survives. 
- A galaxy isn’t just stars and dust; it’s the canvas of adventure, destiny, and the Force that connects us all.</p>
+Together they form clusters and superclusters, whole communities of worlds and civilizations. That’s the stage where stories like mine play out—where Empires rise, Rebels fight, and hope survives. 
+A galaxy isn’t just stars and dust; it’s the canvas of adventure, destiny, and the Force that connects us all.</p>
+
