small final edits

--- a/page1.html
+++ b/page1.html
@@ -6,9 +6,9 @@
 </head>
 <body style="background-color:black; color:white;">
 
-<h1> What's is a Galaxy?</h1>
+<h1> What is a Galaxy?</h1>
 <P> A galaxy… well, it’s more than just stars and planets scattered in the night sky. 
-It’s an enormous family:
+It’s an enormous family of:
 <ul>
     <li>Suns</li>
     <li>Worlds</li>
