--- a/index.html
+++ b/index.html
@@ -2,15 +2,11 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title> STAR WARS - TOP FIVE RATED SHIPS TO TRAVEL WITH</title>
+<title>All about space</title>
 </head>
 <body style="background-color:black; color:white;">
 <body>
 
 
-<h1> STAR WARS - TOP FIVE RATED SHIPS TO TRAVEL WITH </h1>
-<P> Alright, listen up. If you’re gonna travel this <a href="page1.html" title="Whats a Galaxy?">galaxy</a> , you don’t wanna be stuck crawling along in some slow freighter that can barely get out of its own way. No—you want something fast. Real fast. The kind of ship that makes the stars blur the second you hit the throttle.
- We’re talking about ships that can outrun trouble, slip past a blockade, and still get you where you’re going before anyone even knew you left. These aren’t just rides—they’re your ticket to freedom, adventure, and maybe a little trouble along the way.
-So sit back while we run through the fastest ships you can hitch a ride on for your next journey. Who knows—one of ‘em might just make you believe in legends.</p>
-
-<header>
+<h1> All about space </h1>
+<p>Space is the vast, seemingly endless expanse that stretches beyond our planet, filled with stars, planets, galaxies, and cosmic phenomena. It is mostly empty, a vacuum where sound cannot travel, and yet it is full of mysteries waiting to be explored. Space is where stars are born, planets orbit, and black holes lurk, shaping the universe with their immense gravity. It is both beautiful and dangerous, a place of wonder that has inspired humans for centuries to look up, dream, and reach for the stars.</p>
