--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@
 
 
 <h1> All about space </h1>
-<p>Space is the vast, seemingly endless expanse that stretches beyond our planet, filled with stars, planets, galaxies, and cosmic phenomena. It is mostly empty, a vacuum where sound cannot travel, and yet it is full of mysteries waiting to be explored. Space is where stars are born, planets orbit, and black holes lurk, shaping the universe with their immense gravity. It is both beautiful and dangerous, a place of wonder that has inspired humans for centuries to look up, dream, and reach for the stars.</p>
+<p>Space is the vast, seemingly endless expanse that stretches beyond our planet, filled with stars, planets, <a href="page1.html" title="What is a Galaxy?">galaxies</a>, and cosmic phenomena. It is mostly empty, a vacuum where sound cannot travel, and yet it is full of mysteries waiting to be explored. Space is where stars are born, planets orbit, and black holes lurk, shaping the universe with their immense gravity. It is both beautiful and dangerous, a place of wonder that has inspired humans for centuries to look up, dream, and reach for the stars.</p>
