--- a/page1.html
+++ b/page1.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title> Whats a Galaxy?</title>
+  <meta charset="UTF-8">
+  <title>Whats a Galaxy?</title>
 </head>
 <body style="background-color:black; color:white;">
 
-<h1> What is a Galaxy?</h1>
-<P> A galaxy… well, it’s more than just stars and planets scattered in the night sky. 
-It’s an enormous family of:
-<ul>
+  <h1>What is a Galaxy?</h1>
+  
+  <p>
+    A galaxy… well, it’s more than just stars and planets scattered in the night sky. 
+    It’s an enormous family of:
+  </p>
+
+  <ul>
     <li>Suns</li>
     <li>Worlds</li>
     <li>Gas</li>
     <li>Dust</li>
-</ul> 
-These are all bound together by a mysterious force we call <a href="page2.html" title="Whats a Gravity?">gravity</a>. 
-Our own home, the Milky Way, is just one of countless galaxies out there. When I was a farm boy staring up at the twin suns on Tatooine, I never imagined that our little system was just a tiny piece of something so much greater—millions of stars stretching farther than I could ever see.
-But galaxies aren’t all the same. Some spin like giant spirals, their arms reaching out like starships caught in a dance, while others are more like glowing clouds with no clear shape.
-Together they form clusters and superclusters, whole communities of worlds and civilizations. That’s the stage where stories like mine play out—where Empires rise, Rebels fight, and hope survives. 
-A galaxy isn’t just stars and dust; it’s the canvas of adventure, destiny, and the Force that connects us all.</p>
+  </ul> 
 
+  <p>
+    These are all bound together by a mysterious force we call 
+    <a href="page2.html" title="Whats a Gravity?">gravity</a>. 
+    Our own home, the Milky Way, is just one of countless galaxies out there. When I was a farm boy staring up at the twin suns on Tatooine, I never imagined that our little system was just a tiny piece of something so much greater—millions of stars stretching farther than I could ever see.
+  </p>
+
+  <p>
+    But galaxies aren’t all the same. Some spin like giant spirals, their arms reaching out like starships caught in a dance, while others are more like glowing clouds with no clear shape.
+    Together they form clusters and superclusters, whole communities of worlds and civilizations. That’s the stage where stories like mine play out—where Empires rise, Rebels fight, and hope survives. 
+    A galaxy isn’t just stars and dust; it’s the canvas of adventure, destiny, and the Force that connects us all.
+  </p>
+
+</body>
+</html>
