--- a/page2.html
+++ b/page2.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title> Whats a Galaxy?</title>
+<title>Whats a Galaxy?</title>
 </head>
 <body style="background-color:black; color:white;">
 
-<h1> What is Gravity?</h1>
-<P>Ah! Gravity! Brilliant stuff, really. See, most people think of it as just "that thing that keeps your feet on the ground"—but oh, no, no, no, it’s so much more clever than that. Gravity is the universe’s way of saying, “Oi, you lot, don’t float off, stay put!” Every star, every planet, every cup of tea, has <a href="page3.html" title="Whats is Mass?">mass</a>, and mass bends space and time itself. That bending makes things fall together. You’re not being pulled down—oh no—you’re actually rolling along the curves of spacetime, like marbles on a trampoline. Isn’t that fantastic? And it’s not picky either! Works everywhere. Gravity holds planets in orbit around suns, moons around planets, galaxies swirling together in enormous cosmic dances. Without it, the stars would scatter, the Earth would drift off, and I’d never be able to explain to someone why apples are so keen on smacking Isaac Newton on the head. It’s invisible, unstoppable, and absolutely everywhere—like the universe’s quiet little reminder that everything, big or small, is connected. Now, isn’t that wonderfully timey-wimey?</P>
+<h1>What is Gravity?</h1>
+<p>Ah! Gravity! Brilliant stuff, really. See, most people think of it as just "that thing that keeps your feet on the ground"—but oh, no, no, no, it’s so much more clever than that. Gravity is the universe’s way of saying, “Oi, you lot, don’t float off, stay put!” Every star, every planet, every cup of tea, has <a href="page3.html" title="What is Mass?">mass</a>, and mass bends space and time itself. That bending makes things fall together. You’re not being pulled down—oh no—you’re actually rolling along the curves of spacetime, like marbles on a trampoline. Isn’t that fantastic? And it’s not picky either! Works everywhere. Gravity holds planets in orbit around suns, moons around planets, galaxies swirling together in enormous cosmic dances. Without it, the stars would scatter, the Earth would drift off, and I’d never be able to explain to someone why apples are so keen on smacking Isaac Newton on the head. It’s invisible, unstoppable, and absolutely everywhere—like the universe’s quiet little reminder that everything, big or small, is connected. Now, isn’t that wonderfully timey-wimey?</p>
+
+</body>
+</html>
